renomeando arquivo de curriculo para realizar deploy

--- a/index.html
+++ b/index.html
@@ -153,16 +153,16 @@
 
             <div class="curriculo-container">
                 <iframe 
-                    src="doc/curriculo.pdf" 
+                    src="doc/Lucas Lobo.pdf" 
                     title="Currículo Lucas Lobo"
                     class="curriculo-iframe"
                 >
                     Seu navegador não suporta a visualização de PDFs. 
-                    <a href="doc/curriculo.pdf" target="_blank">Clique aqui para baixar o PDF</a>.
+                    <a href="doc/Lucas Lobo.pdf" target="_blank">Clique aqui para baixar o PDF</a>.
                 </iframe>
             </div>
 
-            <a href="doc/curriculo.pdf" class="download-button" download="Curriculo_Lucas_Lobo.pdf">
+            <a href="doc/Lucas Lobo.pdf" class="download-button" download="Curriculo_Lucas_Lobo.pdf">
                 Baixar Currículo (PDF)
             </a>
         </section>
