--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
             <div class="curriculo-container">
                 <iframe 
-                    src="doc/Lucas Lobo.pdf" 
+                    src="doc/Currículo - Lucas Lobo.pdf" 
                     title="Currículo Lucas Lobo"
                     class="curriculo-iframe"
                 >
