Section freelancers adicionada

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <li><a href="#projetos">Projetos</a></li>
                 <li><a href="#curriculo">Currículo</a></li>
                 <li><a href="#certificados">Certificados</a></li> <li><a href="#contato">Contato</a></li>
+                <li><a href="#freelance">Freelances</a></li>
             </ul>
 
             <button class="hamburger-menu" id="hamburger-menu" aria-label="Abrir menu">
@@ -115,7 +116,7 @@
             <div class="projects-grid">
                 <div class="project-card">
                     <img src="imgs/2.png" alt="Gerenciador de tarefas">
-                    <h3>Gerenciador de tarefas</h3>
+                    <h3>Gerenciador de tarefas( em andamento)</h3>
                     <p>Projeto para gerenciador de tarefas, este é um projeto completo onde estou criando todas as funcionalidades do app no front end e no lado do backend</p>
                     <div class="project-links">
                         <a href="https://github.com/DevSamuelJ/TodoList" target="_blank">Ver Código</a>
@@ -124,7 +125,7 @@
                 </div>
                 <div class="project-card">
                     <img src="imgs/1 (2).png" alt="Gerenciador de Estoque">
-                    <h3>Gerenciador de estoque</h3>
+                    <h3>Gerenciador de estoque(em andamento)</h3>
                     <p>Este projeto tem como objetivo criar um sistema completo de gerenciamento de estoque de um negócio de pequeno porte</p>
                     <div class="project-links">
                         <a href="https://github.com/DevSamuelJ/SmartStock" target="_blank">Ver Código</a>
@@ -133,7 +134,7 @@
                 </div>
                 <div class="project-card">
                     <img src="imgs/3.png" alt="Análise de Ações">
-                    <h3>Análise de Ações</h3>
+                    <h3>Análise de Ações( em andamento )</h3>
                     <p>Este projeto tem como objetivo trazer relatórios e gráficos detalhados do histórico de variação de preços das principais ações vigentes no mercado</p>
                     <div class="project-links">
                         <a href="#" target="_blank">Ver Código</a>
@@ -142,6 +143,68 @@
                 </div>
             </div>  
         </section>
+
+        <section id="freelance" class="content-section">
+    <h2>Freelances Realizados</h2>
+    <p style="margin-bottom: 30px;">Projetos desenvolvidos para clientes reais, focados em conversão e presença digital.</p>
+    
+    <div class="projects-grid">
+        <div class="project-card">
+            <img src="imgs/freela-lp.png" alt="Landing Page de Alta Conversão">
+            <h3>Landing Page - Consultoria</h3>
+            <p>Desenvolvimento de página de alta conversão para consultoria financeira, focada em captura de leads via WhatsApp.</p>
+            <div class="project-links">
+                <span>Cliente: Confiance Capital</span>
+                <a href="#" target="_blank">Ver Online</a>
+                <a href="#" target="_blank">Ver Código</a>
+            </div>
+        </div>
+
+        <div class="project-card">
+            <img src="imgs/freela-inst.png" alt="Site Institucional">
+            <h3>Site Institucional - Escritório Advocacia</h3>
+            <p>Site responsivo com blog integrado e sistema de agendamento de consultas para escritório de direito civil.</p>
+            <div class="project-links">
+                <span>Cliente: Silva & Associados</span>
+                <a href="#" target="_blank">Ver Online</a>
+                <a href="#" target="_blank">Ver Código</a>
+            </div>
+        </div>
+
+        <div class="project-card">
+            <img src="imgs/freela-ebook.png" alt="Página de Captura">
+            <h3>Página de Captura - E-book Fitness</h3>
+            <p>Criação de página focada em download de material rico com integração direta ao Mailchimp para automação.</p>
+            <div class="project-links">
+                <span>Cliente: FitLife Academy</span>
+                <a href="#" target="_blank">Ver Online</a>
+                <a href="#" target="_blank">Ver Código</a>
+            </div>
+        </div>
+
+        <div class="project-card">
+            <img src="imgs/freela-bio.png" alt="Página de Bio Customizada">
+            <h3>Bio Link Customizado - Influencer</h3>
+            <p>Página personalizada de links para redes sociais, com rastreio de cliques e design otimizado para mobile.</p>
+            <div class="project-links">
+                <span>Cliente: Mariana Souza</span>
+                <a href="#" target="_blank">Ver Online</a>
+                <a href="#" target="_blank">Ver Código</a>
+            </div>
+        </div>
+
+        <div class="project-card">
+            <img src="imgs/freela-local.png" alt="Site para Negócio Local">
+            <h3>Página Única - Hamburgueria Artesanal</h3>
+            <p>Landing page para delivery local com cardápio digital interativo e integração com API do WhatsApp.</p>
+            <div class="project-links">
+                <span>Cliente: Burger House</span>
+                <a href="#" target="_blank">Ver Online</a>
+                <a href="#" target="_blank">Ver Código</a>
+            </div>
+        </div>
+    </div>
+</section>
 
 </section>
 
